plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // LangChain4j core - used for PromptTemplate (no external API key required)
    implementation 'dev.langchain4j:langchain4j:0.35.0'
    // LangChain4j Google Gemini (direct Gemini API via Google AI Studio)
    implementation 'dev.langchain4j:langchain4j-google-ai-gemini:0.35.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
